// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should match the snapshot when an admin user is logged in 1`] = `
<DocumentFragment>
  <nav
    class="navbar is-dark"
  >
    <div
      class="navbar-brand"
    >
      <span
        class="navbar-item is-size-3"
      >
        To Dos
      </span>
      <div
        class="navbar-burger"
      >
        <span
          aria-hidden="true"
        />
        <span
          aria-hidden="true"
        />
        <span
          aria-hidden="true"
        />
      </div>
    </div>
    <div
      class="navbar-menu"
    >
      <div
        class="navbar-start"
      >
        <span
          class="navbar-item is-clickable"
          data-testid="goToRoot"
        >
          Home
        </span>
        <span
          class="navbar-item is-clickable"
          data-testid="goToLists"
        >
          Lists
        </span>
        <span
          class="navbar-item is-clickable"
          data-testid="goToUsers"
        >
          Users
        </span>
      </div>
      <div
        class="navbar-end"
      >
        <hr
          class="my-0"
        />
        <span
          class="navbar-item is-clickable"
          data-testid="logOut"
        >
          Log Out admin
        </span>
      </div>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`Header should match the snapshot when the user is logged in 1`] = `
<DocumentFragment>
  <nav
    class="navbar is-dark"
  >
    <div
      class="navbar-brand"
    >
      <span
        class="navbar-item is-size-3"
      >
        To Dos
      </span>
      <div
        class="navbar-burger"
      >
        <span
          aria-hidden="true"
        />
        <span
          aria-hidden="true"
        />
        <span
          aria-hidden="true"
        />
      </div>
    </div>
    <div
      class="navbar-menu"
    >
      <div
        class="navbar-start"
      >
        <span
          class="navbar-item is-clickable"
          data-testid="goToRoot"
        >
          Home
        </span>
        <span
          class="navbar-item is-clickable"
          data-testid="goToLists"
        >
          Lists
        </span>
      </div>
      <div
        class="navbar-end"
      >
        <hr
          class="my-0"
        />
        <span
          class="navbar-item is-clickable"
          data-testid="logOut"
        >
          Log Out user
        </span>
      </div>
    </div>
  </nav>
</DocumentFragment>
`;
